# super-http

./: .editorconfig  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/auth/: mod.rs
src/indexer/: fs.rs  links_storage.rs  mod.rs  parser.rs
src/indexer/handlers/: links.rs  mod.rs  search.rs  start_indexing.rs
static/search/: search.css  search.html  search.js  tools.js
