[package]
name = "super-http"
version = "0.1.0"
authors = ["Mark Orel <mail.ormark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "1"
actix-web = "3"
actix-web-httpauth = "0.5.0"
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
failure = "0.1.8"
lazy_static = "1.4.0"
log = "0.4.14"
portpicker = "0.1.0"
scraper = "0.12.0"
serde = "1.0.123"
serde_json = "1.0.62"
sha2 = "0.9.3"
tantivy = "0.14.0"
tempfile = "3.1.0"
url = "2.2.1"
urlencoding = "1.1.1"
walkdir = "2"
